<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/lidarr_server_explainer"
        android:textColor="@color/onSurfaceColor"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_url_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/lidarr_server_url_hint"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_paste"
        app:endIconContentDescription="@string/paste_from_clipboard">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textUri"
            android:singleLine="true"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/api_key_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lidarr_api_key"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_paste"
        app:endIconContentDescription="@string/paste_from_clipboard">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/onSurfaceColorInactive"
        android:textSize="15sp"
        android:visibility="gone" />
</LinearLayout>
